# lanyard-chat

./: dependencies.txt  pyproject.toml
app/: server.py
config/: db.py
llm/: model.py
llm/chain/: full_chain.py  response_chain.py  understand_chain.py
llm/chain/sub_chain/: chat_chain.py  default_chain.py  format_data_chain.py  product_chain.py
llm/prompts/: faq_prompt.py  query_type.py  sql_prompt.py
llm/retriever/: default_retriever.py  product_retriever.py
llm/schema/: faq_schema.py  query_type.py  sql_query.py
test/: retrieval.ipynb  sql_test.py
utils/: execute_query.py  serialize_result.py
